syntax = "proto3";

import "google/protobuf/empty.proto";

package account;

service AccountService {
  // Метод для создания аккаунта, принимает параметры создания, возвращает пустой ответ
  rpc CreateAccount(CreateAccountRequest) returns (google.protobuf.Empty);

  // Метод для получения счетов пользователя
  rpc GetUserAccounts(GetUserAccountsRequest) returns (UserAccountsResponse);
}

message CreateAccountRequest {
  int32 user_id = 1;
  string account_type = 2;
  double initial_balance = 3;
}

message GetUserAccountsRequest {
  int32 user_id = 1;
}

message Account {
  int32 account_id = 1;
  string account_type = 2;
  double balance = 3;
}

message UserAccountsResponse {
  repeated Account accounts = 1;
}
